Fixed up the homepage. Added more text spacing, put images closer together, etc.

--- a/html files/styles.css
+++ b/html files/styles.css
@@ -1,3 +1,4 @@
+/* size adjustments for icons */
 .fa-warehouse {
 font-size: 25px;
 }
@@ -9,4 +10,32 @@ font-size: 25px;
 }
 .fa-bolt-lightning {
   font-size: 25px;  
+}
+
+/* positions for text */
+.homepage {
+  position:relative;
+  left:30px; 
+}
+.paragraph {
+  position:relative;
+  left:30px;
+}
+
+/* image positions */
+.truck {
+  position:relative;
+  width:100%;
+  right:30px;
+}
+.opslag {
+  position:relative;
+  bottom:241px;
+  left:120px;
+}
+
+.paperwork {
+  position:relative;
+  bottom:482px;
+  left:360px;
 }
